--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@erquhart/gotrue-js",
   "description": "GoTrue API client for JavaScript",
-  "version": "0.9.29",
+  "version": "0.9.30",
   "author": "Mathias Biilmann Christensen",
   "bugs": "https://github.com/netlify/micro-api-client-lib/issues",
   "dependencies": {
@@ -49,6 +49,7 @@
     "prepublishOnly:install": "run-local \"npm ci\"",
     "prepublishOnly:test": "npm test",
     "compile": "babel src -d lib",
+    "watch": "babel src --watch -d lib",
     "test": "run-s format test:dev",
     "format": "run-s format:check-fix:*",
     "format:ci": "run-s format:check:*",
